[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WrapAI"
version = "0.1.0"
description = "A reusable Python library"
authors = [{ name = "David", email = "dave@chatrecall.com" }]
dependencies = [
    "requests>=2.31.0",
    "tiktoken>=0.8.0"
]

[tool.setuptools]
packages = ["WrapAI"]
package-dir = {"" = "src"}
include-package-data = true
