[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WrapAI"
version = "0.1.0"
description = "A reusable Python library"
authors = [{ name = "David", email = "dave@chatrecall.com" }]
requires-python = ">=3.13"

dependencies = [
    "requests>=2.31.0",
    "tiktoken>=0.8.0",
    "wrapdataclass",
]

[tool.setuptools]
include-package-data = true

[tool.uv.sources]
wrapdataclass = { git = "https://github.com/taxman20000/WrapDataclass.git"}